--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -63,8 +63,11 @@
 							<div class="hero-form field field-grouped is-revealing">
 								<form action="/home" method="get">
 									<div class="control control-expanded">
-										<input class="input" type="name" name="name" id="inputName"
+										<input class="input" type="text" name="name" id="name"
 											placeholder="Your first name&hellip;">
+									</div>
+									<div class="control control-expanded">
+										<input class="input" type="text" name="wname" id="wname" placeholder="Your first name&hellip;">
 									</div>
 									<div class="control">
 										
