frnd name chngs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -64,10 +64,10 @@
 								<form action="/home" method="get">
 									<div class="control control-expanded">
 										<input class="input" type="text" name="name" id="name"
-											placeholder="Your first name&hellip;">
+											placeholder="Your name&hellip;">
 									</div>
 									<div class="control control-expanded">
-										<input class="input" type="text" name="wname" id="wname" placeholder="Your first name&hellip;">
+										<input class="input" type="text" name="wname" id="wname" placeholder="Your friend name&hellip;">
 									</div>
 									<div class="control">
 										
