--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -165,7 +165,7 @@
                     name: $('#name').val(),
                     wname: $('#wname').val(),
                     email: $('#email').val(),
-                    message: $('#message').val(),
+                    // message: $('#message').val(),
                 },
                 success: (response) => {
                     console.log(response);
