--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -93,7 +93,8 @@
 
         <div class="content-wrapper" id="contact">
             <!-- Third replaceble image -->
-            <img class="img-absolute" src="https://c.tadst.com/gfx/750w/istock-454353339.jpg" alt="City 3">
+            <img class="img-absolute" src="https://c.tadst.com/gfx/750w/istock-454353339.jp" alt="City 3">
+            <video autoplay loop muted class="img-absolute" src="/video/kerala.mp4"></video>
 
             <!-- Custom form, important note: you will need additional code in order to make this form work -->
             <form id="mailform" class="contact-form astonish" method="post" data-animation="fadeInRight">
