video to single page

--- a/src/views/home1.ejs
+++ b/src/views/home1.ejs
@@ -49,8 +49,8 @@
     <!-- Main header -->
     <header>
         <!-- First replaceble image -->
-        <img class="img-absolute" src="https://drive.google.com/uc?export=view&id=1-PlenJqkonqGoRqNKFsYfJTf6PSD0G3n"
-            alt="City 1">
+        
+            <video class="img-absolute" autoplay loop muted src="/video/glitter.mp4"></video>
         <div class="wrapper astonish animated fadeInDown">
             <br>
             <h1><strong>Happy</strong>Diwali</h1>
