front page qotes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -57,9 +57,8 @@
 				<div class="container">
 					<div class="hero-inner">
 						<div class="hero-copy">
-							<h1 class="hero-title mt-0 is-revealing">Diwali wishes messenger</h1>
-							<p class="hero-paragraph is-revealing"> We are the messenger that help you to send mail to
-								your friend</p>
+							<h1 class="hero-title mt-0 is-revealing">Diwali Messenger</h1>
+							<p class="hero-paragraph is-revealing">"Be well , do good work , and keep in touch"</p>
 							<div class="hero-form field field-grouped is-revealing">
 								<form action="/home" method="get">
 									<div class="control control-expanded">
