--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title><%=name%></title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4337/4337079.png" type="image/icon type">
     <style>
         /* If you wish to remove the astonish.js file, then also be sure to remove these styles. */
         .astonish {
