--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>HAppy diwali</title>
+	<title>Happy diwali</title>
+	<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4337/4337079.png" type="image/icon type">
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
 	<link rel="stylesheet" href="/css/style.css">
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
